# mcp-postgresql-agent-hack

./: .env.sample  .gitignore  README.md  brave.py  chainlit.config.json  chainlit.md  chainlit_app.py  client.py  orchestration_plan.md  package.json  plan.md  pyproject.toml  query_mcp.py  requirements.txt  sample_mcp_config.json
app/: chainlit_app.py  chainlit_client.py  client.py  config.py  init_db.py  llm_orchestrator.py  multi_client.py  server_connection.py
logs/: api_response_20250301_214407.json  api_response_20250301_214410.json  api_response_20250301_214414.json  api_response_20250301_214419.json  api_response_20250301_214424.json  api_response_20250301_214430.json  api_response_20250301_214938.json  api_response_20250301_214943.json  api_response_20250301_214949.json  api_response_20250301_214957.json  api_response_20250301_215004.json  api_response_20250301_215012.json  api_response_20250301_215915.json  api_response_20250301_215955.json  api_response_20250301_215959.json  api_response_20250301_220002.json  api_response_20250301_220006.json  api_response_20250301_220009.json  api_response_20250301_220012.json  api_response_20250301_220014.json  api_response_20250301_220018.json  api_response_20250301_220021.json  api_response_20250301_220024.json  api_response_20250301_220126.json  api_response_20250301_220129.json  api_response_20250301_220134.json  api_response_20250301_220138.json  api_response_20250301_220141.json  api_response_20250301_220216.json  api_response_20250301_220219.json  api_response_20250301_220449.json  api_response_20250301_220504.json  (+19 more)
(+5 files in other folders)
